--- a/index.html
+++ b/index.html
@@ -19,4 +19,40 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </div>
+
+    <div class="main">
+        <div class="left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller
+                font and the
+                color is lower contrast.</p>
+             <button class="sign-up">Sign up</button>   
+        </div>
+        <div class="right">
+            <div class="image">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="content">
+        <h2>Some random information</h2>
+        <div class="cards">
+            <div class="image-card">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="image-card">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="image-card">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="image-card">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
   </body>
