--- a/index.html
+++ b/index.html
@@ -55,4 +55,24 @@
             </div>
         </div>
     </div>
+
+    <div class="quote">
+        <em>This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it
+            looks nice.</em>
+        <p><b>- Thor, God of Thunder</b></p>
+    </div>
+
+    <div class="signup-section">
+        <div class="left">
+            <b>Call to action! It's time!</b>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <div class="right">
+            <button class="sign-button">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">Copyright &copy; The Odin Project 2021</div>
   </body>
+</html>
