--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 
   <body>
     <div class="header">
-        <div class="left">
-            <div class="logo">Header Logo</div>
-        </div> 
-        <ul class="right-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
+        <div class="navbar">
+            <div class="navbar-left">
+                <p id="header-logo">Header Logo</p>
+            </div> 
+            <div class="navbar-right">
+                <ul style="list-style-type:none;">
+                   <li class="header-link">header link one</li>
+                   <li class="header-link">header link two</li>
+                   <li class="header-link">header link three</li>
+                </ul>
+            </div>
+        </div>    
+        <div class="content">
+            <div class="content-left">
+                <h1>This website is awesome</h1>
+                <p class="header-link">This website has some subtext that goes here under the main title. It's a smaller
+                font and the
+                color is lower contrast.</p>
+                <button type="button" class="sign-up-header">Sign up</button>   
+            </div>
+        <div class="content-right">
+            <img src="https://picjumbo.com/download?d=old-barn-near-the-forest-hidden-in-the-fog-free-photo.jpg&n=old-barn-near-the-forest-hidden-in-the-fog&id=1" alt="Forest" width="500">
+        </div>
     </div>
 
     <div class="main">
-        <div class="left">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller
-                font and the
-                color is lower contrast.</p>
-             <button class="sign-up">Sign up</button>   
-        </div>
-        <div class="right">
-            <div class="image">
-                <p>this is a placeholder for an image</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="content">
         <h2>Some random information</h2>
         <div class="cards">
             <div class="image-card">
