Finished the first section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>    
         <div class="content">
             <div class="content-left">
-                <h1>This website is awesome</h1>
-                <p class="header-link">This website has some subtext that goes here under the main title. It's a smaller
+                <h1>This website is <br> awesome</h1>
+                <p class="p-first">This website has some subtext that goes here under the <br>main title. It's a smaller
                 font and the
-                color is lower contrast.</p>
+                color is lower <br>contrast.</p>
                 <button type="button" class="sign-up-header">Sign up</button>   
             </div>
         <div class="content-right">
