finished all the sections, did some changes in html file

--- a/index.html
+++ b/index.html
@@ -1,78 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-
-  <body>
-    <div class="header">
-        <div class="navbar">
-            <div class="navbar-left">
-                <p id="header-logo">Header Logo</p>
-            </div> 
-            <div class="navbar-right">
-                <ul style="list-style-type:none;">
-                   <li class="header-link">header link one</li>
-                   <li class="header-link">header link two</li>
-                   <li class="header-link">header link three</li>
-                </ul>
+    <head>
+        <title>Landing Page</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div class="header">
+            <div class="navbar">
+                <div class="navbar-left">
+                    <p id="header-logo">Header Logo</p>
+                </div>
+                <div class="navbar-right">
+                    <ul style="list-style-type:none;">
+                        <li class="header-link">header link one</li>
+                        <li class="header-link">header link two</li>
+                        <li class="header-link">header link three</li>
+                    </ul>
+                </div>
             </div>
-        </div>    
-        <div class="content">
-            <div class="content-left">
-                <h1>This website is <br> awesome</h1>
-                <p class="p-first">This website has some subtext that goes here under the <br>main title. It's a smaller
-                font and the
-                color is lower <br>contrast.</p>
-                <button type="button" class="sign-up-header">Sign up</button>   
-            </div>
-        <div class="content-right">
-            <img src="https://picjumbo.com/download?d=old-barn-near-the-forest-hidden-in-the-fog-free-photo.jpg&n=old-barn-near-the-forest-hidden-in-the-fog&id=1" alt="Forest" width="500">
-        </div>
-    </div>
-
-    <div class="main">
-        <h2>Some random information</h2>
-        <div class="cards">
-            <div class="image-card">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-
-            <div class="image-card">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-
-            <div class="image-card">
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-
-            <div class="image-card">
-                <p>this is some subtext under an illustration or image</p>
+            <div class="content">
+                <div class="content-left">
+                    <h1>This website is <br> awesome</h1>
+                    <p class="p-first">This website has some subtext that goes here under the <br>main title. It's a smaller
+                    font and the
+                    color is lower <br>contrast.</p>
+                    <button type="button" class="sign-up-header">Sign up</button> 
+                </div>
+                <div class="content-right">
+                    <img src="https://picjumbo.com/download?d=old-barn-near-the-forest-hidden-in-the-fog-free-photo.jpg&n=old-barn-near-the-forest-hidden-in-the-fog&id=1" alt="Forest" width="500">
+                </div>
             </div>
         </div>
-    </div>
 
-    <div class="quote">
-        <em>This is an inspiring quote, or a testimonial from a customer.
-            Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it
-            looks nice.</em>
-        <p><b>- Thor, God of Thunder</b></p>
-    </div>
+        <div class="main">
+            <h2>Some random information.</h2>
+            <div class="cards">
+                <div class="box-blue-msg">
+                    <div class="box-blue"></div>
+                    <p class="p-second">this is some subtext<br> under an illustration<br> or image</p> 
+                </div>
 
-    <div class="signup-section">
-        <div class="left">
-            <b>Call to action! It's time!</b>
-            <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="box-blue-msg">
+                    <div class="box-blue"></div>
+                    <p class="p-second">this is some subtext<br> under an illustration<br> or image</p> 
+                </div>
+
+                <div class="box-blue-msg">
+                    <div class="box-blue"></div>
+                    <p class="p-second">this is some subtext <br>under an illustration<br> or image</p> 
+                </div>
+
+                <div class="box-blue-msg">
+                    <div class="box-blue"></div>
+                    <p class="p-second">this is some subtext<br> under an illustration<br> or image</p> 
+                </div>
+            </div>
         </div>
-        <div class="right">
-            <button class="sign-button">Sign up</button>
-        </div>
-    </div>
 
-    <div class="footer">Copyright &copy; The Odin Project 2021</div>
-  </body>
+        <div class="quote">
+            <h3>This is an inspiring quote, or a testimonial from a <br>customer.
+                Maybe it's just filling up space, or maybe<br> people will actually read it. Who knows? All I know <br>is that it
+                looks nice.
+            </h3>
+            <p class="p-third">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="signup-section">
+            <div class="blue-container">
+                <div class="left">
+                    <h4>Call to action! It's time!</h4>
+                    <p class="last-p">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="right">
+                    <button type="button" class="sign-button">Sign up</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            Copyright &copy; The Odin Project 2022
+        </div>
+    </body>
 </html>
